# Small-Scale-Parallel-Programming

Set1/: hello.c  matrix_add.c  openmp_add.sub  openmp_sort.sub  sorting.c
Set2/: matrix_matrix_serial.c  matrix_vector_serial.c  openmp_mm.sub  openmp_mv.sub
Solutions/: dot_product.c  matrixPreprocessing.c  matrixPreprocessing.h  matrixVector.c  matrix_vector_block_unroll_2.c  matrix_vector_block_unroll_8.c  matrix_vector_serial.c  mmio.c  print.c  print.h  test.c  test.h
Solutions/assignmentFilesOpenMP/: matrixVector.h  matrix_vector_serial.c  wtime.h
Solutions/assignmentFilesSerial/: Makefile  matrixVector.h  mmio.h
Solutions/other solutions/: matrix_add.c  matrix_matrix_block_42.c  matrix_matrix_serial.c  matrix_vector_unroll_8.c  sorting.c
assignmentFilesCUDA/: CMakeLists.txt  Makefile  cuda.sub  matrixPreprocessing.h  matrixVector.cu  matrixVector.h  matrix_vector_CUDA.cu  outputCUDA  test.cu  test.h
assignmentFilesOpenMP/: matrixVector.c  matrixVector.h  matrix_vector_openMP.c  openmpAll.sub  outputOPENMP  wtime.c
assignmentFilesSerial/: matrixPreprocessing.h  matrix_vector_serial.c  outputSERIAL  print.c  print.h  serial.sub  test.h
